// Vitest Snapshot v1

exports[`<CustomRegisterField> > renders and matches snapshot <Checkbox> 1`] = `
<div>
  <div
    class="_checkbox_531f07"
  >
    <div
      class="_row_531f07"
    >
      <input
        id="check-box_1235_name"
        name="name"
        type="checkbox"
        value=""
      />
      <label
        for="check-box_1235_name"
      >
        
        label
      </label>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="country"> 1`] = `
<div>
  <div
    class="_container_bb73c6 _fullWidth_bb73c6 _medium_bb73c6"
  >
    <label
      class="_label_bb73c6"
      for="1235"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_dropdown_bb73c6 _fullWidth_bb73c6"
    >
      <select
        aria-required="false"
        class="_select_bb73c6"
        id="1235"
        name="name"
      >
        <option
          class="_option_bb73c6"
          value="af"
        >
          Afghanistan
        </option>
        <option
          class="_option_bb73c6"
          value="ax"
        >
          Åland Islands
        </option>
        <option
          class="_option_bb73c6"
          value="al"
        >
          Albania
        </option>
        <option
          class="_option_bb73c6"
          value="dz"
        >
          Algeria
        </option>
        <option
          class="_option_bb73c6"
          value="as"
        >
          American Samoa
        </option>
        <option
          class="_option_bb73c6"
          value="ad"
        >
          Andorra
        </option>
        <option
          class="_option_bb73c6"
          value="ao"
        >
          Angola
        </option>
        <option
          class="_option_bb73c6"
          value="ai"
        >
          Anguilla
        </option>
        <option
          class="_option_bb73c6"
          value="aq"
        >
          Antarctica
        </option>
        <option
          class="_option_bb73c6"
          value="ag"
        >
          Antigua and Barbuda
        </option>
        <option
          class="_option_bb73c6"
          value="ar"
        >
          Argentina
        </option>
        <option
          class="_option_bb73c6"
          value="am"
        >
          Armenia
        </option>
        <option
          class="_option_bb73c6"
          value="aw"
        >
          Aruba
        </option>
        <option
          class="_option_bb73c6"
          value="au"
        >
          Australia
        </option>
        <option
          class="_option_bb73c6"
          value="at"
        >
          Austria
        </option>
        <option
          class="_option_bb73c6"
          value="az"
        >
          Azerbaijan
        </option>
        <option
          class="_option_bb73c6"
          value="bs"
        >
          Bahamas
        </option>
        <option
          class="_option_bb73c6"
          value="bh"
        >
          Bahrain
        </option>
        <option
          class="_option_bb73c6"
          value="bd"
        >
          Bangladesh
        </option>
        <option
          class="_option_bb73c6"
          value="bb"
        >
          Barbados
        </option>
        <option
          class="_option_bb73c6"
          value="by"
        >
          Belarus
        </option>
        <option
          class="_option_bb73c6"
          value="be"
        >
          Belgium
        </option>
        <option
          class="_option_bb73c6"
          value="bz"
        >
          Belize
        </option>
        <option
          class="_option_bb73c6"
          value="bj"
        >
          Benin
        </option>
        <option
          class="_option_bb73c6"
          value="bm"
        >
          Bermuda
        </option>
        <option
          class="_option_bb73c6"
          value="bt"
        >
          Bhutan
        </option>
        <option
          class="_option_bb73c6"
          value="bo"
        >
          Bolivia, Plurinational State of
        </option>
        <option
          class="_option_bb73c6"
          value="bq"
        >
          Bonaire, Sint Eustatius and Saba
        </option>
        <option
          class="_option_bb73c6"
          value="ba"
        >
          Bosnia and Herzegovina
        </option>
        <option
          class="_option_bb73c6"
          value="bw"
        >
          Botswana
        </option>
        <option
          class="_option_bb73c6"
          value="bv"
        >
          Bouvet Island
        </option>
        <option
          class="_option_bb73c6"
          value="br"
        >
          Brazil
        </option>
        <option
          class="_option_bb73c6"
          value="io"
        >
          British Indian Ocean Territory
        </option>
        <option
          class="_option_bb73c6"
          value="bn"
        >
          Brunei Darussalam
        </option>
        <option
          class="_option_bb73c6"
          value="bg"
        >
          Bulgaria
        </option>
        <option
          class="_option_bb73c6"
          value="bf"
        >
          Burkina Faso
        </option>
        <option
          class="_option_bb73c6"
          value="bi"
        >
          Burundi
        </option>
        <option
          class="_option_bb73c6"
          value="kh"
        >
          Cambodia
        </option>
        <option
          class="_option_bb73c6"
          value="cm"
        >
          Cameroon
        </option>
        <option
          class="_option_bb73c6"
          value="ca"
        >
          Canada
        </option>
        <option
          class="_option_bb73c6"
          value="cv"
        >
          Cape Verde
        </option>
        <option
          class="_option_bb73c6"
          value="ky"
        >
          Cayman Islands
        </option>
        <option
          class="_option_bb73c6"
          value="cf"
        >
          Central African Republic
        </option>
        <option
          class="_option_bb73c6"
          value="td"
        >
          Chad
        </option>
        <option
          class="_option_bb73c6"
          value="cl"
        >
          Chile
        </option>
        <option
          class="_option_bb73c6"
          value="cn"
        >
          China
        </option>
        <option
          class="_option_bb73c6"
          value="cx"
        >
          Christmas Island
        </option>
        <option
          class="_option_bb73c6"
          value="cc"
        >
          Cocos (Keeling) Islands
        </option>
        <option
          class="_option_bb73c6"
          value="co"
        >
          Colombia
        </option>
        <option
          class="_option_bb73c6"
          value="km"
        >
          Comoros
        </option>
        <option
          class="_option_bb73c6"
          value="cg"
        >
          Congo
        </option>
        <option
          class="_option_bb73c6"
          value="cd"
        >
          Congo, the Democratic Republic of the
        </option>
        <option
          class="_option_bb73c6"
          value="ck"
        >
          Cook Islands
        </option>
        <option
          class="_option_bb73c6"
          value="cr"
        >
          Costa Rica
        </option>
        <option
          class="_option_bb73c6"
          value="ci"
        >
          Côte d'Ivoire
        </option>
        <option
          class="_option_bb73c6"
          value="hr"
        >
          Croatia
        </option>
        <option
          class="_option_bb73c6"
          value="cu"
        >
          Cuba
        </option>
        <option
          class="_option_bb73c6"
          value="cw"
        >
          Curaçao
        </option>
        <option
          class="_option_bb73c6"
          value="cy"
        >
          Cyprus
        </option>
        <option
          class="_option_bb73c6"
          value="cz"
        >
          Czech Republic
        </option>
        <option
          class="_option_bb73c6"
          value="dk"
        >
          Denmark
        </option>
        <option
          class="_option_bb73c6"
          value="dj"
        >
          Djibouti
        </option>
        <option
          class="_option_bb73c6"
          value="dm"
        >
          Dominica
        </option>
        <option
          class="_option_bb73c6"
          value="do"
        >
          Dominican Republic
        </option>
        <option
          class="_option_bb73c6"
          value="ec"
        >
          Ecuador
        </option>
        <option
          class="_option_bb73c6"
          value="eg"
        >
          Egypt
        </option>
        <option
          class="_option_bb73c6"
          value="sv"
        >
          El Salvador
        </option>
        <option
          class="_option_bb73c6"
          value="gq"
        >
          Equatorial Guinea
        </option>
        <option
          class="_option_bb73c6"
          value="er"
        >
          Eritrea
        </option>
        <option
          class="_option_bb73c6"
          value="ee"
        >
          Estonia
        </option>
        <option
          class="_option_bb73c6"
          value="et"
        >
          Ethiopia
        </option>
        <option
          class="_option_bb73c6"
          value="fk"
        >
          Falkland Islands (Malvinas)
        </option>
        <option
          class="_option_bb73c6"
          value="fo"
        >
          Faroe Islands
        </option>
        <option
          class="_option_bb73c6"
          value="fj"
        >
          Fiji
        </option>
        <option
          class="_option_bb73c6"
          value="fi"
        >
          Finland
        </option>
        <option
          class="_option_bb73c6"
          value="fr"
        >
          France
        </option>
        <option
          class="_option_bb73c6"
          value="gf"
        >
          French Guiana
        </option>
        <option
          class="_option_bb73c6"
          value="pf"
        >
          French Polynesia
        </option>
        <option
          class="_option_bb73c6"
          value="tf"
        >
          French Southern Territories
        </option>
        <option
          class="_option_bb73c6"
          value="ga"
        >
          Gabon
        </option>
        <option
          class="_option_bb73c6"
          value="gm"
        >
          Gambia
        </option>
        <option
          class="_option_bb73c6"
          value="ge"
        >
          Georgia
        </option>
        <option
          class="_option_bb73c6"
          value="de"
        >
          Germany
        </option>
        <option
          class="_option_bb73c6"
          value="gh"
        >
          Ghana
        </option>
        <option
          class="_option_bb73c6"
          value="gi"
        >
          Gibraltar
        </option>
        <option
          class="_option_bb73c6"
          value="gr"
        >
          Greece
        </option>
        <option
          class="_option_bb73c6"
          value="gl"
        >
          Greenland
        </option>
        <option
          class="_option_bb73c6"
          value="gd"
        >
          Grenada
        </option>
        <option
          class="_option_bb73c6"
          value="gp"
        >
          Guadeloupe
        </option>
        <option
          class="_option_bb73c6"
          value="gu"
        >
          Guam
        </option>
        <option
          class="_option_bb73c6"
          value="gt"
        >
          Guatemala
        </option>
        <option
          class="_option_bb73c6"
          value="gg"
        >
          Guernsey
        </option>
        <option
          class="_option_bb73c6"
          value="gn"
        >
          Guinea
        </option>
        <option
          class="_option_bb73c6"
          value="gw"
        >
          Guinea-Bissau
        </option>
        <option
          class="_option_bb73c6"
          value="gy"
        >
          Guyana
        </option>
        <option
          class="_option_bb73c6"
          value="ht"
        >
          Haiti
        </option>
        <option
          class="_option_bb73c6"
          value="hm"
        >
          Heard Island and McDonald Islands
        </option>
        <option
          class="_option_bb73c6"
          value="va"
        >
          Holy See (Vatican City State)
        </option>
        <option
          class="_option_bb73c6"
          value="hn"
        >
          Honduras
        </option>
        <option
          class="_option_bb73c6"
          value="hk"
        >
          Hong Kong
        </option>
        <option
          class="_option_bb73c6"
          value="hu"
        >
          Hungary
        </option>
        <option
          class="_option_bb73c6"
          value="is"
        >
          Iceland
        </option>
        <option
          class="_option_bb73c6"
          value="in"
        >
          India
        </option>
        <option
          class="_option_bb73c6"
          value="id"
        >
          Indonesia
        </option>
        <option
          class="_option_bb73c6"
          value="ir"
        >
          Iran, Islamic Republic of
        </option>
        <option
          class="_option_bb73c6"
          value="iq"
        >
          Iraq
        </option>
        <option
          class="_option_bb73c6"
          value="ie"
        >
          Ireland
        </option>
        <option
          class="_option_bb73c6"
          value="im"
        >
          Isle of Man
        </option>
        <option
          class="_option_bb73c6"
          value="il"
        >
          Israel
        </option>
        <option
          class="_option_bb73c6"
          value="it"
        >
          Italy
        </option>
        <option
          class="_option_bb73c6"
          value="jm"
        >
          Jamaica
        </option>
        <option
          class="_option_bb73c6"
          value="jp"
        >
          Japan
        </option>
        <option
          class="_option_bb73c6"
          value="je"
        >
          Jersey
        </option>
        <option
          class="_option_bb73c6"
          value="jo"
        >
          Jordan
        </option>
        <option
          class="_option_bb73c6"
          value="kz"
        >
          Kazakhstan
        </option>
        <option
          class="_option_bb73c6"
          value="ke"
        >
          Kenya
        </option>
        <option
          class="_option_bb73c6"
          value="ki"
        >
          Kiribati
        </option>
        <option
          class="_option_bb73c6"
          value="kp"
        >
          Korea, Democratic People's Republic of
        </option>
        <option
          class="_option_bb73c6"
          value="kr"
        >
          Korea, Republic of
        </option>
        <option
          class="_option_bb73c6"
          value="kw"
        >
          Kuwait
        </option>
        <option
          class="_option_bb73c6"
          value="kg"
        >
          Kyrgyzstan
        </option>
        <option
          class="_option_bb73c6"
          value="la"
        >
          Lao People's Democratic Republic
        </option>
        <option
          class="_option_bb73c6"
          value="lv"
        >
          Latvia
        </option>
        <option
          class="_option_bb73c6"
          value="lb"
        >
          Lebanon
        </option>
        <option
          class="_option_bb73c6"
          value="ls"
        >
          Lesotho
        </option>
        <option
          class="_option_bb73c6"
          value="lr"
        >
          Liberia
        </option>
        <option
          class="_option_bb73c6"
          value="ly"
        >
          Libya
        </option>
        <option
          class="_option_bb73c6"
          value="li"
        >
          Liechtenstein
        </option>
        <option
          class="_option_bb73c6"
          value="lt"
        >
          Lithuania
        </option>
        <option
          class="_option_bb73c6"
          value="lu"
        >
          Luxembourg
        </option>
        <option
          class="_option_bb73c6"
          value="mo"
        >
          Macao
        </option>
        <option
          class="_option_bb73c6"
          value="mk"
        >
          Macedonia
        </option>
        <option
          class="_option_bb73c6"
          value="mg"
        >
          Madagascar
        </option>
        <option
          class="_option_bb73c6"
          value="mw"
        >
          Malawi
        </option>
        <option
          class="_option_bb73c6"
          value="my"
        >
          Malaysia
        </option>
        <option
          class="_option_bb73c6"
          value="mv"
        >
          Maldives
        </option>
        <option
          class="_option_bb73c6"
          value="ml"
        >
          Mali
        </option>
        <option
          class="_option_bb73c6"
          value="mt"
        >
          Malta
        </option>
        <option
          class="_option_bb73c6"
          value="mh"
        >
          Marshall Islands
        </option>
        <option
          class="_option_bb73c6"
          value="mq"
        >
          Martinique
        </option>
        <option
          class="_option_bb73c6"
          value="mr"
        >
          Mauritania
        </option>
        <option
          class="_option_bb73c6"
          value="mu"
        >
          Mauritius
        </option>
        <option
          class="_option_bb73c6"
          value="yt"
        >
          Mayotte
        </option>
        <option
          class="_option_bb73c6"
          value="mx"
        >
          Mexico
        </option>
        <option
          class="_option_bb73c6"
          value="fm"
        >
          Micronesia, Federated States of
        </option>
        <option
          class="_option_bb73c6"
          value="md"
        >
          Moldova, Republic of
        </option>
        <option
          class="_option_bb73c6"
          value="mc"
        >
          Monaco
        </option>
        <option
          class="_option_bb73c6"
          value="mn"
        >
          Mongolia
        </option>
        <option
          class="_option_bb73c6"
          value="me"
        >
          Montenegro
        </option>
        <option
          class="_option_bb73c6"
          value="ms"
        >
          Montserrat
        </option>
        <option
          class="_option_bb73c6"
          value="ma"
        >
          Morocco
        </option>
        <option
          class="_option_bb73c6"
          value="mz"
        >
          Mozambique
        </option>
        <option
          class="_option_bb73c6"
          value="mm"
        >
          Myanmar
        </option>
        <option
          class="_option_bb73c6"
          value="na"
        >
          Namibia
        </option>
        <option
          class="_option_bb73c6"
          value="nr"
        >
          Nauru
        </option>
        <option
          class="_option_bb73c6"
          value="np"
        >
          Nepal
        </option>
        <option
          class="_option_bb73c6"
          value="nl"
        >
          Netherlands
        </option>
        <option
          class="_option_bb73c6"
          value="nc"
        >
          New Caledonia
        </option>
        <option
          class="_option_bb73c6"
          value="nz"
        >
          New Zealand
        </option>
        <option
          class="_option_bb73c6"
          value="ni"
        >
          Nicaragua
        </option>
        <option
          class="_option_bb73c6"
          value="ne"
        >
          Niger
        </option>
        <option
          class="_option_bb73c6"
          value="ng"
        >
          Nigeria
        </option>
        <option
          class="_option_bb73c6"
          value="nu"
        >
          Niue
        </option>
        <option
          class="_option_bb73c6"
          value="nf"
        >
          Norfolk Island
        </option>
        <option
          class="_option_bb73c6"
          value="mp"
        >
          Northern Mariana Islands
        </option>
        <option
          class="_option_bb73c6"
          value="no"
        >
          Norway
        </option>
        <option
          class="_option_bb73c6"
          value="om"
        >
          Oman
        </option>
        <option
          class="_option_bb73c6"
          value="pk"
        >
          Pakistan
        </option>
        <option
          class="_option_bb73c6"
          value="pw"
        >
          Palau
        </option>
        <option
          class="_option_bb73c6"
          value="ps"
        >
          Palestine, State of
        </option>
        <option
          class="_option_bb73c6"
          value="pa"
        >
          Panama
        </option>
        <option
          class="_option_bb73c6"
          value="pg"
        >
          Papua New Guinea
        </option>
        <option
          class="_option_bb73c6"
          value="py"
        >
          Paraguay
        </option>
        <option
          class="_option_bb73c6"
          value="pe"
        >
          Peru
        </option>
        <option
          class="_option_bb73c6"
          value="ph"
        >
          Philippines
        </option>
        <option
          class="_option_bb73c6"
          value="pn"
        >
          Pitcairn
        </option>
        <option
          class="_option_bb73c6"
          value="pl"
        >
          Poland
        </option>
        <option
          class="_option_bb73c6"
          value="pt"
        >
          Portugal
        </option>
        <option
          class="_option_bb73c6"
          value="pr"
        >
          Puerto Rico
        </option>
        <option
          class="_option_bb73c6"
          value="qa"
        >
          Qatar
        </option>
        <option
          class="_option_bb73c6"
          value="re"
        >
          Réunion
        </option>
        <option
          class="_option_bb73c6"
          value="ro"
        >
          Romania
        </option>
        <option
          class="_option_bb73c6"
          value="ru"
        >
          Russian Federation
        </option>
        <option
          class="_option_bb73c6"
          value="rw"
        >
          Rwanda
        </option>
        <option
          class="_option_bb73c6"
          value="bl"
        >
          Saint Barthélemy
        </option>
        <option
          class="_option_bb73c6"
          value="sh"
        >
          Saint Helena, Ascension and Tristan da Cunha
        </option>
        <option
          class="_option_bb73c6"
          value="kn"
        >
          Saint Kitts and Nevis
        </option>
        <option
          class="_option_bb73c6"
          value="lc"
        >
          Saint Lucia
        </option>
        <option
          class="_option_bb73c6"
          value="mf"
        >
          Saint Martin (French part)
        </option>
        <option
          class="_option_bb73c6"
          value="pm"
        >
          Saint Pierre and Miquelon
        </option>
        <option
          class="_option_bb73c6"
          value="vc"
        >
          Saint Vincent and the Grenadines
        </option>
        <option
          class="_option_bb73c6"
          value="ws"
        >
          Samoa
        </option>
        <option
          class="_option_bb73c6"
          value="sm"
        >
          San Marino
        </option>
        <option
          class="_option_bb73c6"
          value="st"
        >
          Sao Tome and Principe
        </option>
        <option
          class="_option_bb73c6"
          value="sa"
        >
          Saudi Arabia
        </option>
        <option
          class="_option_bb73c6"
          value="sn"
        >
          Senegal
        </option>
        <option
          class="_option_bb73c6"
          value="rs"
        >
          Serbia
        </option>
        <option
          class="_option_bb73c6"
          value="sc"
        >
          Seychelles
        </option>
        <option
          class="_option_bb73c6"
          value="sl"
        >
          Sierra Leone
        </option>
        <option
          class="_option_bb73c6"
          value="sg"
        >
          Singapore
        </option>
        <option
          class="_option_bb73c6"
          value="sx"
        >
          Sint Maarten (Dutch part)
        </option>
        <option
          class="_option_bb73c6"
          value="sk"
        >
          Slovakia
        </option>
        <option
          class="_option_bb73c6"
          value="si"
        >
          Slovenia
        </option>
        <option
          class="_option_bb73c6"
          value="sb"
        >
          Solomon Islands
        </option>
        <option
          class="_option_bb73c6"
          value="so"
        >
          Somalia
        </option>
        <option
          class="_option_bb73c6"
          value="za"
        >
          South Africa
        </option>
        <option
          class="_option_bb73c6"
          value="gs"
        >
          South Georgia and the South Sandwich Islands
        </option>
        <option
          class="_option_bb73c6"
          value="ss"
        >
          South Sudan
        </option>
        <option
          class="_option_bb73c6"
          value="es"
        >
          Spain
        </option>
        <option
          class="_option_bb73c6"
          value="lk"
        >
          Sri Lanka
        </option>
        <option
          class="_option_bb73c6"
          value="sd"
        >
          Sudan
        </option>
        <option
          class="_option_bb73c6"
          value="sr"
        >
          SuridisplayName
        </option>
        <option
          class="_option_bb73c6"
          value="sj"
        >
          Svalbard and Jan Mayen
        </option>
        <option
          class="_option_bb73c6"
          value="sz"
        >
          Swaziland
        </option>
        <option
          class="_option_bb73c6"
          value="se"
        >
          Sweden
        </option>
        <option
          class="_option_bb73c6"
          value="ch"
        >
          Switzerland
        </option>
        <option
          class="_option_bb73c6"
          value="sy"
        >
          Syrian Arab Republic
        </option>
        <option
          class="_option_bb73c6"
          value="tw"
        >
          Taiwan, Province of China
        </option>
        <option
          class="_option_bb73c6"
          value="tj"
        >
          Tajikistan
        </option>
        <option
          class="_option_bb73c6"
          value="tz"
        >
          Tanzania, United Republic of
        </option>
        <option
          class="_option_bb73c6"
          value="th"
        >
          Thailand
        </option>
        <option
          class="_option_bb73c6"
          value="tl"
        >
          Timor-Leste
        </option>
        <option
          class="_option_bb73c6"
          value="tg"
        >
          Togo
        </option>
        <option
          class="_option_bb73c6"
          value="tk"
        >
          Tokelau
        </option>
        <option
          class="_option_bb73c6"
          value="to"
        >
          Tonga
        </option>
        <option
          class="_option_bb73c6"
          value="tt"
        >
          Trinidad and Tobago
        </option>
        <option
          class="_option_bb73c6"
          value="tn"
        >
          Tunisia
        </option>
        <option
          class="_option_bb73c6"
          value="tr"
        >
          Turkey
        </option>
        <option
          class="_option_bb73c6"
          value="tm"
        >
          Turkmenistan
        </option>
        <option
          class="_option_bb73c6"
          value="tc"
        >
          Turks and Caicos Islands
        </option>
        <option
          class="_option_bb73c6"
          value="tv"
        >
          Tuvalu
        </option>
        <option
          class="_option_bb73c6"
          value="ug"
        >
          Uganda
        </option>
        <option
          class="_option_bb73c6"
          value="ua"
        >
          Ukraine
        </option>
        <option
          class="_option_bb73c6"
          value="ae"
        >
          United Arab Emirates
        </option>
        <option
          class="_option_bb73c6"
          value="gb"
        >
          United Kingdom
        </option>
        <option
          class="_option_bb73c6"
          value="us"
        >
          United States
        </option>
        <option
          class="_option_bb73c6"
          value="um"
        >
          United States Minor Outlying Islands
        </option>
        <option
          class="_option_bb73c6"
          value="uy"
        >
          Uruguay
        </option>
        <option
          class="_option_bb73c6"
          value="uz"
        >
          Uzbekistan
        </option>
        <option
          class="_option_bb73c6"
          value="vu"
        >
          Vanuatu
        </option>
        <option
          class="_option_bb73c6"
          value="ve"
        >
          Venezuela, Bolivarian Republic of
        </option>
        <option
          class="_option_bb73c6"
          value="vn"
        >
          Viet Nam
        </option>
        <option
          class="_option_bb73c6"
          value="vg"
        >
          Virgin Islands, British
        </option>
        <option
          class="_option_bb73c6"
          value="vi"
        >
          Virgin Islands, U.S.
        </option>
        <option
          class="_option_bb73c6"
          value="wf"
        >
          Wallis and Futuna
        </option>
        <option
          class="_option_bb73c6"
          value="eh"
        >
          Western Sahara
        </option>
        <option
          class="_option_bb73c6"
          value="ye"
        >
          Yemen
        </option>
        <option
          class="_option_bb73c6"
          value="zm"
        >
          Zambia
        </option>
        <option
          class="_option_bb73c6"
          value="zw"
        >
          Zimbabwe
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="datepicker"> 1`] = `
<div>
  <div
    class="_checkbox_531f07"
  >
    <div
      class="_row_531f07"
    >
      <input
        id="check-box_1235_name"
        name="name"
        type="checkbox"
        value=""
      />
      <label
        for="check-box_1235_name"
      >
        
        label
      </label>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="randomstring"> 1`] = `
<div>
  <div
    class="_checkbox_531f07"
  >
    <div
      class="_row_531f07"
    >
      <input
        id="check-box_1235_name"
        name="name"
        type="checkbox"
        value=""
      />
      <label
        for="check-box_1235_name"
      >
        
        label
      </label>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="select"> 1`] = `
<div>
  <div
    class="_container_bb73c6 _fullWidth_bb73c6 _medium_bb73c6"
  >
    <label
      class="_label_bb73c6"
      for="1235"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_dropdown_bb73c6 _fullWidth_bb73c6"
    >
      <select
        aria-required="false"
        class="_select_bb73c6"
        id="1235"
        name="name"
      />
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="us_state"> 1`] = `
<div>
  <div
    class="_container_bb73c6 _fullWidth_bb73c6 _medium_bb73c6"
  >
    <label
      class="_label_bb73c6"
      for="1235"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_dropdown_bb73c6 _fullWidth_bb73c6"
    >
      <select
        aria-required="false"
        class="_select_bb73c6"
        id="1235"
        name="name"
      >
        <option
          class="_option_bb73c6"
          value="al"
        >
          Alabama
        </option>
        <option
          class="_option_bb73c6"
          value="ak"
        >
          Alaska
        </option>
        <option
          class="_option_bb73c6"
          value="as"
        >
          American Samoa
        </option>
        <option
          class="_option_bb73c6"
          value="az"
        >
          Arizona
        </option>
        <option
          class="_option_bb73c6"
          value="ar"
        >
          Arkansas
        </option>
        <option
          class="_option_bb73c6"
          value="ca"
        >
          California
        </option>
        <option
          class="_option_bb73c6"
          value="co"
        >
          Colorado
        </option>
        <option
          class="_option_bb73c6"
          value="ct"
        >
          Connecticut
        </option>
        <option
          class="_option_bb73c6"
          value="de"
        >
          Delaware
        </option>
        <option
          class="_option_bb73c6"
          value="dc"
        >
          District Of Columbia
        </option>
        <option
          class="_option_bb73c6"
          value="fm"
        >
          Federated States Of Micronesia
        </option>
        <option
          class="_option_bb73c6"
          value="fl"
        >
          Florida
        </option>
        <option
          class="_option_bb73c6"
          value="ga"
        >
          Georgia
        </option>
        <option
          class="_option_bb73c6"
          value="gu"
        >
          Guam
        </option>
        <option
          class="_option_bb73c6"
          value="hi"
        >
          Hawaii
        </option>
        <option
          class="_option_bb73c6"
          value="id"
        >
          Idaho
        </option>
        <option
          class="_option_bb73c6"
          value="il"
        >
          Illinois
        </option>
        <option
          class="_option_bb73c6"
          value="in"
        >
          Indiana
        </option>
        <option
          class="_option_bb73c6"
          value="ia"
        >
          Iowa
        </option>
        <option
          class="_option_bb73c6"
          value="ks"
        >
          Kansas
        </option>
        <option
          class="_option_bb73c6"
          value="ky"
        >
          Kentucky
        </option>
        <option
          class="_option_bb73c6"
          value="la"
        >
          Louisiana
        </option>
        <option
          class="_option_bb73c6"
          value="me"
        >
          Maine
        </option>
        <option
          class="_option_bb73c6"
          value="mh"
        >
          Marshall Islands
        </option>
        <option
          class="_option_bb73c6"
          value="md"
        >
          Maryland
        </option>
        <option
          class="_option_bb73c6"
          value="ma"
        >
          Massachusetts
        </option>
        <option
          class="_option_bb73c6"
          value="mi"
        >
          Michigan
        </option>
        <option
          class="_option_bb73c6"
          value="mn"
        >
          Minnesota
        </option>
        <option
          class="_option_bb73c6"
          value="ms"
        >
          Mississippi
        </option>
        <option
          class="_option_bb73c6"
          value="mo"
        >
          Missouri
        </option>
        <option
          class="_option_bb73c6"
          value="mt"
        >
          Montana
        </option>
        <option
          class="_option_bb73c6"
          value="ne"
        >
          Nebraska
        </option>
        <option
          class="_option_bb73c6"
          value="nv"
        >
          Nevada
        </option>
        <option
          class="_option_bb73c6"
          value="nh"
        >
          New Hampshire
        </option>
        <option
          class="_option_bb73c6"
          value="nj"
        >
          New Jersey
        </option>
        <option
          class="_option_bb73c6"
          value="nm"
        >
          New Mexico
        </option>
        <option
          class="_option_bb73c6"
          value="ny"
        >
          New York
        </option>
        <option
          class="_option_bb73c6"
          value="nc"
        >
          North Carolina
        </option>
        <option
          class="_option_bb73c6"
          value="nd"
        >
          North Dakota
        </option>
        <option
          class="_option_bb73c6"
          value="mp"
        >
          Northern Mariana Islands
        </option>
        <option
          class="_option_bb73c6"
          value="oh"
        >
          Ohio
        </option>
        <option
          class="_option_bb73c6"
          value="ok"
        >
          Oklahoma
        </option>
        <option
          class="_option_bb73c6"
          value="or"
        >
          Oregon
        </option>
        <option
          class="_option_bb73c6"
          value="pw"
        >
          Palau
        </option>
        <option
          class="_option_bb73c6"
          value="pa"
        >
          Pennsylvania
        </option>
        <option
          class="_option_bb73c6"
          value="pr"
        >
          Puerto Rico
        </option>
        <option
          class="_option_bb73c6"
          value="ri"
        >
          Rhode Island
        </option>
        <option
          class="_option_bb73c6"
          value="sc"
        >
          South Carolina
        </option>
        <option
          class="_option_bb73c6"
          value="sd"
        >
          South Dakota
        </option>
        <option
          class="_option_bb73c6"
          value="tn"
        >
          Tennessee
        </option>
        <option
          class="_option_bb73c6"
          value="tx"
        >
          Texas
        </option>
        <option
          class="_option_bb73c6"
          value="ut"
        >
          Utah
        </option>
        <option
          class="_option_bb73c6"
          value="vt"
        >
          Vermont
        </option>
        <option
          class="_option_bb73c6"
          value="vi"
        >
          Virgin Islands
        </option>
        <option
          class="_option_bb73c6"
          value="va"
        >
          Virginia
        </option>
        <option
          class="_option_bb73c6"
          value="wa"
        >
          Washington
        </option>
        <option
          class="_option_bb73c6"
          value="wv"
        >
          West Virginia
        </option>
        <option
          class="_option_bb73c6"
          value="wi"
        >
          Wisconsin
        </option>
        <option
          class="_option_bb73c6"
          value="wy"
        >
          Wyoming
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Radio> 1`] = `
<div>
  <div>
    <div
      class="_header_d50e6e"
    >
      label
      <span>
        optional
      </span>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <TextField> 1`] = `
<div>
  <div
    class="_textField_e16c1b"
  >
    <label
      class="_label_e16c1b"
      for="text-field_1235_name"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_container_e16c1b"
    >
      <input
        class="_input_e16c1b"
        id="text-field_1235_name"
        name="name"
        type="text"
        value="value"
      />
    </div>
  </div>
</div>
`;
